styles/main.css
/* --------------- */
/* Document entier */
/* --------------- */
html
{
	/* Variables globales */
	--html-min-width: 360px;

	--theme-color-dark: 12, 87, 157;		/* Couleur foncée du thème */
	--theme-color-bright: 0, 133, 255;		/* Couleur claire du thème */

	--theme-text-color: 161, 161, 170;		/* Couleur de certains paragraphes */

	--theme-background-color: 24, 24, 27;	/* Couleur de fond par défaut */
	--theme-box-color: 39, 39, 42;			/* Couleur de certains blocs */

	/* Traitement des textes */
	color: white;
	hyphens: auto;
	text-align: center;
	font-family: "Open Sans", sans-serif;
	text-rendering: optimizeSpeed;

	/* Disposition et affichage */
	min-width: var(--html-min-width);
	scroll-behavior: smooth;

	background-image: url("../images/decorations/wireframes.png");
	background-color: rgb(var(--theme-background-color));
	background-attachment: fixed;
}

section
{
	/* Animation d'apparition des sections
		(voir également côté JavaScript) */
	transition: opacity 700ms ease;
}

strong
{
	/* Éléments de haute importance */
	font-size: 1.1rem;
	text-decoration: underline solid;
}

noscript
{
	/* Avertissement page sans JavaScript */
	top: 1rem;
	right: 1rem;
	padding: 0.5rem;
	margin-left: 6rem;

	z-index: 10;
	position: fixed;

	color: white;
	background-color: red;
}

::selection
{
	/* Sélection du texte */
	color: white;
	background-color: rgb(var(--theme-color-dark));
}

/* Personnalisation de la barre de défilement
	(Navigateurs WebKit uniquement : https://caniuse.com/css-scrollbar) */
::-webkit-scrollbar
{
	/* Taille de la barre */
	width: 0.75rem;
}

::-webkit-scrollbar-track
{
	/* Fond de la barre */
	background-color: whitesmoke;
}

::-webkit-scrollbar-thumb
{
	/* Couleur classique de la barre */
	background-color: rgb(var(--theme-color-dark));
}

::-webkit-scrollbar-thumb:hover
{
	/* Couleur de la barre lors d'une sélection */
	background-color: rgb(var(--theme-box-color));
}

/* ------- */
/* En-tête */
/* ------- */
header
{
	/* Corps de l'en-tête */
	padding: 4rem 2.5rem 4rem 2.5rem;
	background-image: linear-gradient(to right, rgb(var(--theme-color-dark)), rgb(var(--theme-color-bright)));
}

header h1
{
	/* Titre de la page */
	margin: 0;
	display: inline-block;
	font-size: 2rem;
	margin-top: 13rem;

	/* Animation à l'arrivée */
	animation: blink 500ms step-end infinite alternate;;
	border-right: 0.150rem solid white;
}

@keyframes blink
{
	50%
	{
		/* Entre chaque affiche d'un caractère,
			on rend transparent le curseur */
		border-color: transparent;
	}
}

header h2
{
	/* Description succincte */
	margin-top: 1rem;
	font-weight: 400;
}

header > img
{
	/* Vagues marquant la fin de l'en-tête */
	left: 0;
	z-index: -1;
	position: absolute;
	min-width: var(--html-min-width);
	max-width: 100%; /* Correctif débile pour Firefox */
	min-height: 400px;
}

/* ------------ */
/* Pied-de-page */
/* ------------ */
footer ul
{
	/* Apparence de la liste */
	margin: 0;
	columns: 3;
	padding: 1rem 10% 1rem 10%;
	column-gap: 2rem;
	column-rule: thin dotted white;
	list-style-type: none;
}

footer li
{
	/* Espacement interne des options */
	padding: 1rem 0 1rem 0;
	word-break: break-word;
}

footer a
{
	/* Couleur de fond */
	padding: 0.5rem;
	background-color: rgb(var(--theme-color-dark));
}

/* ------------------- */
/* Barre de navigation */
/* ------------------- */
nav
{
	/* Corps de la barre (meilleur équivalent des lignes 206
		à 208 actuellement commentées mais sortant du
		flux de la page à cause de la position fixée) */
	display: flex;
	justify-content: center;
}

nav ul
{
	/* Propriétés principales de la barre */
	z-index: 5;
	position: fixed;
	border-radius: 6rem;
	backdrop-filter: blur(0.5rem);
	-webkit-backdrop-filter: blur(0.5rem); /* Correctif débile pour Safari */
	background-color: rgba(var(--theme-color-bright), 0.7);

	/* Suppression du style par défaut des listes
		non ordonnées */
	list-style-type: none;

	/* Ajustement de l'espacement de la barre */
	padding: 1.25rem 2.5rem 1.25rem 2.5rem;

	/* Alignement automatique centrée de la barre
		(de façon horizontale) */
	top: 7rem;
	left: 5%;
	right: 5%;
	margin: 0 auto 0 auto;
	/* left: 50%;
	right: 0;
	display: fixed;
	transform: translatex(-50%); */

	/* Longueur minimale de la barre */
	min-width: calc(var(--html-min-width) - 7rem); /* padding + position gauche/droite */
}

@-moz-document url-prefix()
{
	/* Modification de la composante alpha de la couleur sur
		Firefox car `backdrop-filter` est désactivé par défaut
		à cause de certains bugs. Source : https://bugzil.la/1578503 */
	nav ul
	{
		background-color: rgba(var(--theme-color-bright), 0.9);
	}
}

nav li
{
	/* Affichage des textes de la liste */
	display: inline;
	padding: 0 0.75rem 0 0.75rem;
	line-height: 1.5rem;
	user-select: none;
}

nav li:first-of-type
{
	/* Suppression de la marge à gauche
		pour la première option */
	padding-left: 0;
}

nav li:last-of-type
{
	/* Suppression de la marge à droite
		pour la dernière option */
	padding-right: 0;
}

/* ---------------------- */
/* Sélection de la langue */
/* ---------------------- */
#flags
{
	/* Positionnement */
	top: 0;
	left: 0;
	position: absolute;
	z-index: 10;

	/* Dimensions */
	width: 5rem;
	margin: 0;
	padding: 0;

	/* Apparence */
	list-style-type: none;
	backdrop-filter: blur(0.5rem); /* Ne fonctionne pas sur Firefox */
	-webkit-backdrop-filter: blur(0.5rem); /* Correctif débile pour Safari */
	background-color: transparent;
}

#flags li
{
	/* État initial d'un item de la liste */
	padding: 10px;
	transition: background-color 300ms ease-out;
}

ul#flags:hover li
{
	/* Apparition des items lors du passage
		de la souris */
	display: block;
}

#flags li:nth-of-type(n+2)
{
	/* Tous les éléments (sauf le premier) sont
		cachés par défaut */
	display: none;
}

@media screen and (pointer: fine) and (hover: hover)
{
	#flags li:hover
	{
		/* Animation de survol d'un item
			(sélection avec maintien) */
		background-color: rgb(var(--theme-color-bright));
	}
}

#flags button
{
	/* Bouton de sélection */
	border: 0;
	margin: 0;
	cursor: pointer;
	padding: 0;
	user-select: none;
	background: none;
}

#flags span
{
	/* Nom de la langue */
	color: white;
	display: block;
	font-size: 0.875rem;
	margin-top: 0.5rem;
}

#flags img
{
	/* Image représentative de la langue */
	width: calc(21.33px * 2.5); /* Gardons les proportions originales... */
	height: calc(16px * 2.5);
}

/* -------------------------- */
/* Retour au début de la page */
/* -------------------------- */
#scrollTop
{
	/* Dimensions */
	width: 3rem;
	height: 3rem;

	/* Alignement */
	right: 1rem;
	bottom: 1rem;
	position: fixed;

	/* Disposition */
	z-index: 5;
	border-radius: 1rem;

	/* Apparence */
	border: none;
	opacity: 0;
	background-color: rgb(var(--theme-color-dark));

	/* Image de décoration */
	background-size: 50%;
	background-image: url("../images/decorations/arrow_up.svg");
	background-repeat: no-repeat;
	background-position: center;

	filter: contrast(50%);
	transition: filter 300ms linear, opacity 200ms ease-out;
	will-change: transform; /* MERCI CHROME... : https://stackoverflow.com/a/62403969 */
}

#scrollTop.show
{
	opacity: 1;
}

#scrollTop:hover
{
	cursor: pointer;
	filter: contrast(100%); /* Voir le dernier commentaire */
}

/* ------------------------- */
/* Overlay des contributions */
/* ------------------------- */
#contributions
{
	/* Dimensions et position de l'overlay */
	top: 0;
	left: 0;
	bottom: 0;

	width: 100%;
	height: 100%;
	position: fixed;
	overflow-y: scroll;
	scrollbar-width: none;  /* Cache la barre de défilement (Firefox uniquement) */

	/* Apparence de l'overlay */
	cursor: pointer;
	display: none;
	z-index: 15;
	background-color: rgba(0, 0, 0, 0.95);
}

#contributions::-webkit-scrollbar
{
	display: none;  /* Cache la barre de défilement pour Chrome & co */
}

#contributions > h2
{
	/* Titre de l'overlay */
	margin: 6rem 10% 6rem 10%;
	font-size: 3rem;
}

@media (prefers-reduced-motion: no-preference)
{
	/* Lancement d'une animation de changement de couleur
		en arc-en-ciel (disponible uniquement si l'utilisateur
		n'a pas demandé à réduire les animations) */
	#contributions > h2
	{
		animation: rainbow 2.5s linear infinite;
	}

	@keyframes rainbow
	{
		0%, 100% { 	color: rgb(255, 0, 0); 	}	/* Composante vert */
		8% 	{ 		color: rgb(255, 127, 0);	}
		16% {		color: rgb(255, 255, 0); 	}
		25% {		color: rgb(127, 255, 0);	}
		33%	{		color: rgb(0, 255, 0);		}	/* Composante rouge */
		41% {		color: rgb(0, 255, 127);	}
		50% {		color: rgb(0, 255, 255);	}
		58% {		color: rgb(0, 127, 255);	}
		66% {		color: rgb(0, 0, 255);		}	/* Composante bleu */
		75% {		color: rgb(127, 0, 255);	}
		83% {		color: rgb(255, 0, 255);	}
		91% {		color: rgb(255, 0, 127);	}
	}
}

#contributions > ul
{
	/* Liste des personnes */
	padding-left: 0;
	list-style-type: none;
}

#contributions li
{
	/* Description de chaque contribution */
	margin: 0 10% 3rem 10%;
	line-height: 1.5rem;
}

@media screen and (pointer: fine) and (hover: hover)
{
	/* On affiche un effet de sélection pour les affichages
		sur ordinateurs uniquement */
	#contributions li
	{
		/* Description de chaque contribution */
		opacity: 0.5;
		transition: opacity 500ms ease;
	}
}

#contributions li:hover
{
	opacity: 1;
	transition: opacity 500ms ease;
}

#contributions h3
{
	/* Identité du contributeur */
	font-size: 2rem;
	text-decoration: underline;
}

#contributions p
{
	/* Description de la contribution */
	color: rgb(var(--theme-text-color));
}

/* ----- */
/* Liens */
/* ----- */
a
{
	/* État initial des liens */
	color: inherit;
	display: inline-block;
	position: relative;
	text-decoration: none;
}

h2 a:active, article a:active, li > a:active
{
	/* Passage progressif en bleu lors de l'appui
		(active + hover) */
	background-color: rgb(var(--theme-color-dark));
}

h2 a:hover, article a:hover, li > a:hover
{
	transition: background-color 500ms ease-out;
}

h2 a::after, article a::after, li > a::after
{
	/* Création d'une ligne qui apparaîtra
		progressivement lors de la sélection */
	left: 0;
	bottom: -2px;
	position: absolute;

	width: 100%;
	height: 1px;

	content: "";
	transform: scale(0);
}

h2 a:hover::after, article a:hover::after, li > a:hover::after
{
	transform: scale(1);
	transition: transform 300ms ease;
	background-color: currentColor;
}

